# rust_aprendizaje

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/CategoryCard/: CategoryCard.module.css  CategoryCard.tsx
src/components/Footer/: Footer.module.css  Footer.tsx
src/components/Header/: Header.module.css  Header.tsx
src/components/ProductCard/: ProductCard.module.css  ProductCard.tsx
src/components/SearchBar/: SearchBar.module.css  SearchBar.tsx
src/context/: ShoppingContext.tsx
src/data/: categories.json  offers.json  products.json
src/hooks/: useProducts.ts
src/pages/About/: About.module.css  About.tsx
src/pages/Home/: Home.module.css  Home.tsx
src/pages/Product/: Product.module.css  Product.tsx
src/pages/Products/: Products.module.css  Products.tsx
src/services/: productService.ts
src/styles/: global.css  variables.css
